      by nwf; bugfix on 0.1.2.x.
    - When counting the number of open sockets, count not only the number
      of sockets we have received from the socket() call, but also the
      number we've gotten from accept().  This bug made us fail to count
      all sockets that we were using for incoming connections.  Bugfix on
      0.2.0.x

  o Minor features (performance):
    - Tune parameters for cell pool allocation to minimize amount of
      RAM overhead used.
    - Add OpenBSD malloc code from phk as an optional malloc
      replacement on Linux: some glibc libraries do very poorly
      with Tor's memory allocation patterns.  Pass
      --enable-openbsd-malloc to get the replacement malloc code.
    - Add a --with-tcmalloc option to the configure script to link
      against tcmalloc (if present).  Does not yet search for
      non-system include paths.

  o Minor features (controller):
    - Add a new __HashedControlSessionPassword option for controllers
      to use for one-off session password hashes that shouldn't get
      saved to disk by SAVECONF.  Partial fix for bug 586.

  o Minor features (logging):
    - When SafeLogging is disabled, log addresses along with all TLS
      errors.

  o Minor bugfixes:
    - Log the correct memory chunk sizes for empty RAM chunks in mempool.c.
    - Directory mirrors no longer include a guess at the client's IP
      address if the connection appears to be coming from the same /24
      network; it was producing too many wrong guesses.
    - We were leaking a file descriptor if Tor started with a zero-length
      cached-descriptors file. Patch by freddy77; bugfix on 0.1.2.
    - Make the new hidden service code respect the SafeLogging setting.
      Bugfix on 0.2.0.x.  Patch from Karsten.
    - Detect size overflow in zlib code.
    - We were comparing the raw BridgePassword entry with a base64'ed
      version of it, when handling a "/tor/networkstatus-bridges"